--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
             <a href="#Kiss_-_rock_and_roll_all_nite">Kiss - rock and roll all nite</a>
             <a href="#Bon_Jovi_-_Its_my_life">Bon Jovi - It's my life</a>
             <a href="#ACDC_-_Highway_to_hell">AC/DC - Highway to hell</a>
+            <a href="Green_Day_-_Basket_Case">Green_Day_-_Basket_Case</a>
+            <a href="Bandalheira_-_Me_leva_pra_casa">Bandalheira_-_Me_leva_pra_casa</a>
+            <a href="Papas_da_Lingua_-_Lua_Cheia">Papas_da_Lingua_-_Lua_Cheia</a>
+            <a href="TNT_-_Nao_sei">TNT_-_Nao_sei</a>
+            <a href="Pearl_Jam_-_Soldier_of_love">Pearl_Jam_-_Soldier_of_love</a>
           </nav>
         </section>
 
@@ -753,6 +758,12 @@ E|4~------------4--------6--4\--|</code>
           <code>
 <b>Tom:</b> Cm
 
+G|---------------------------------|
+D|---------------1-----------------|
+A|-3-3---3-1-3-----3-3-------------|
+E|-------------3---------1-1---1-1-|
+B|---------------------------------|</code>
+          <code>
 C5/G  F5/C  <b>C5  Ab5  Eb5  Bb/D</b>
 
 C5  Ab5  Bb5 <b>Bb  B</b>  C5  Ab5
@@ -761,24 +772,34 @@ Eb5  Bb/D  C5  Ab5  Bb5
 
 <b>Bb B</b> C5/G</code>
           <code>
+
+G|---------------------------------|
+D|--------------------1------------|
+A|-3-(xN)-------3---6---3-6/8-6----|
+E|--------1-3-4---6----------------|
+B|---------------------------------|
+</code>
+          <code>
+G|---------------------------------|
+D|-0-1-0-1---1-0-1-3---------------|
+A|---------3---------1…-2…-3…------|
+E|---------------------------------|
+B|---------------------------------|
+</code>
+          <code>
+G|---------------------------------|
+D|-------------1---1/3-1-0-1---1---|
+A|---------3-1---3-----------3-----|
+E|---1-3-4-------------------------|
+B|-1-------------------------------|
+</code>
+          <code>
 G|---------------------------------|
 D|---------------------------------|
 A|---------------------------------|
 E|---------------------------------|
 B|-1-1-3-4-3-1-1-1-----------------|
-ou
-G|---------------------------------|
-D|---------------1-----------------|
-A|-3-3---3-1-3-----3-3-------------|
-E|-------------3---------1-1---1-1-|
-B|---------------------------------|</code>
-          <code>
-<b>Campo harmônico:</b>
-G|---------------------------------|
-D|---------------------------------|
-A|---------------------------------|
-E|---------------------------------|
-B|---------------------------------|</code>
+</code>
         </section>
 
 
@@ -797,6 +818,119 @@ D|----------------------5------|
 A|------------------5-7---5----|
 E|----5-5-5-5-5-5-5------------|
 B|-----------------------------|</code>
+        </section>
+
+
+
+
+        <section id="Green_Day_-_Basket_Case">
+          <h2><a href="#">#</a> Green Day - Basket Case</h2>
+          <code>
+<b>Tom:</b> A
+
+Eb5   Bb5  C5   G5   Ab5
+
+Ab5   Bb5  Eb5  Db5  C5
+
+Ab5   Bb5   ( Eb5 Bb5 C5 Bb5 ) (2x)
+
+   Eb5         Bb5    C5           G5        Ab5
+I went to a shrink to analyze my dreams she says it's
+         Eb5                 Bb5
+Lack of sex that's bringing me down
+   Eb5        Bb5     C5               G5       Ab5
+I went to a whore he said my life's a bore so quit my
+         Eb5                 Bb5
+Whining cause it's bringing her down</code>
+          <code>
+G|-8h10p8-----------------
+D|------------------------
+A|--------6-6-6-6-6-6-6\--
+E|------------------------
+
+G|-------------------------
+D|-------------------------
+A|-6---4-3-3-----3-6-------
+E|---4-------4-6-----------
+B|-------------------------
+
+G|-----------------------------|
+D|----------------------5------|
+A|------------------5-7---5----|
+E|----5-5-5-5-5-5-5------------|
+B|-----------------------------|</code>
+        </section>
+
+
+        <section id="Bandalheira_-_Me_leva_pra_casa">
+          <h2><a href="#">#</a> Bandalheira - Me leva pra casa </h2>
+          <code>
+<b>Tom:</b> G
+
+[Intro] G  C9 (4x)
+
+G  Am  C9  D  Em
+
+Refrão:
+
+C9  Em  A7  D</code>
+        </section>
+
+
+
+        <section id="Papas_da_Lingua_-_Lua_Cheia">
+          <h2><a href="#">#</a> Papas da Língua - Lua Cheia</h2>
+          <code>
+<b>Tom:</b> C
+[Intro] C  F (8x)
+
+C      F     C F
+  C              F
+
+Refrão: C  G  Am    F
+
+Ponte:
+Dm7  C
+Dm7  F</code>
+        </section>
+
+
+
+        <section id="TNT_-_Nao_sei">
+          <h2><a href="#">#</a> TNT - Não sei</h2>
+          <code>
+<b>Tom:</b> D
+INTRO.: D  D4  A  G  A
+
+(D D4 A G A)
+
+[Ponte]
+(A G)
+
+Não sei mais o que faço
+[Ponte]
+(A G)</code>
+        </section>
+
+
+
+        <section id="Pearl_Jam_-_Soldier_of_love">
+          <h2><a href="#">#</a> Pearl_Jam_-_Soldier_of_love</h2>
+          <code>
+<b>Tom:</b>  B
+[Intro]
+
+E|---------------------------|
+B|---------------------------|
+G|---------------------------|  (2x)
+D|---------------------------|
+A|--7------7-6-4--------4----|
+E|---7-7--7-------4-4--4-4---| </code>
+<code>
+C#m  E
+C#m  F#  E
+
+E   G#  A  B  E</code>
         </section>
     </div>
   </div>
