--- a/index.html
+++ b/index.html
@@ -191,6 +191,97 @@ B|--0-----3---5---7-8----------------|</code>
 
 
 
+        <section class="music" id="Billy_Idol_-_Dancing_with_myself">
+          <h2><a href="#">#</a> Billy Idol - Dancing with myself </h2>
+          <code>
+<b>Tom:</b> E
+
+E  A  B  A
+
+E  A  E  B</code>
+          <code>
+<b>Campo harmônico:</b>
+G|-------------------------4-4-4-4-------------------------|
+D|---------2-2-2-2-4-4-4-4-----------------2-2-2-2-4-4-4-4-|
+A|-2-2-2-2-------------------------2-2-2-2-----------------|
+E|---------------------------------------------------------|
+B|---------------------------------------------------------|</code>
+        </section>
+
+
+
+        <section class="music" id="Pixies_-_Here_comes_you_man">
+          <h2><a href="#">#</a> Pixies - Here comes you man </h2>
+          <code>
+<b>Tom:</b> D
+
+D  A  Em  G
+
+Bm  G  A
+
+<b>Refrão:</b>
+G  A  D</code>
+          <code>
+G|------------------------------------------------|
+D|--<b>0--0</b>----4--4--5------------------------0-2--0-|
+A|--5--5-------------0-------2--0--0--4-----------|
+E|----------------------3-------------------------|
+B|------------------------------------------------|</code>
+        </section>
+
+
+        <section class="music" id="Talking_Heads_-_Psycho_Killer">
+          <h2><a href="#">#</a> Talking_Heads_-_Psycho_Killer</h2>
+          <code>
+G|---------------------------------------|
+D|-4--2--0-------------------------------|
+A|----------4--2--0--2--4----------------|
+E|---------------------------------------|
+</code><code>
+G|---------------------------------------|
+D|-5--4--2--0--5--4--2--0----------------|
+A|---------------------------------------|
+E|---------------------------------------|
+</code><code>
+G|---------------------------------------|
+D|-4--2--0-------------------------------|
+A|----------4--2--0--2--4----------------|
+E|---------------------------------------|
+</code><code>
+G|---------------------------------------|
+D|-5--4--2--0--5--4--2--0----------------|
+A|---------------------------------------|
+E|---------------------------------------|
+</code><code>
+G|---------------------4-2-0-----4-2-0---|
+D|-4-2-0-----4-2-0-----------0---------0-|
+A|-------0---------0---------------------|
+E|---------------------------------------|</code>
+        </section>
+
+
+
+        <section class="music" id="John_Mellencamp_-_Hurts_So_Good">
+          <h2><a href="#">#</a> John Mellencamp - Hurts So Good </h2>
+          <code>
+<b>Tom:</b> D
+A  F#m  E
+
+A  E  F#m  D
+
+<b>Campo harmônico:</b>
+G|--------------------------------------|
+D|--------------------------------------|
+A|--------------------------------------|
+E|--------------------------------------|
+B|--------------------------------------|</code>
+        </section>
+
+
+
+
+
+
         <section class="music" id="Raimundos_-_Mulher_de_Fases">
           <h2><a href="#">#</a> Raimundos - Mulher de Fases </h2>
           <code>
@@ -243,6 +334,23 @@ B|------------------------|</code>
 
 
 
+
+        <section class="music" id="Tequila_Baby_-_Velhas_Fotos">
+          <h2><a href="#">#</a> Tequila_Baby_-_Velhas_Fotos</h2>
+          <code>
+
+   B   G
+
+
+G|--------------------------------------|
+D|--------------------------------------|
+A|--------------------------------------|
+E|--------------------------------------|
+B|--------------------------------------|</code>
+        </section>
+
+
+
         <section class="music" id="Mamonas_-_Robocop_Gay">
           <h2><a href="#">#</a> Mamonas - Robocop Gay </h2>
           <code>
@@ -251,7 +359,10 @@ B|------------------------|</code>
 C  G
 
 <b>Solo:</b>
-C5  G5  A5  F5</code>
+
+    C5  G5  A5  F5
+
+</code>
           <code>
 <b>Campo harmônico:</b>
 G|-----------------------------------------------|
@@ -263,60 +374,23 @@ B|-----3-----------------------------------------|</code>
 
 
 
-        <section class="music" id="Billy_Idol_-_Dancing_with_myself">
-          <h2><a href="#">#</a> Billy Idol - Dancing with myself </h2>
-          <code>
-<b>Tom:</b> E
-
-E  A  B  A
-
-E  A  E  B</code>
-          <code>
-<b>Campo harmônico:</b>
-G|-------------------------4-4-4-4-------------------------|
-D|---------2-2-2-2-4-4-4-4-----------------2-2-2-2-4-4-4-4-|
-A|-2-2-2-2-------------------------2-2-2-2-----------------|
-E|---------------------------------------------------------|
-B|---------------------------------------------------------|</code>
-        </section>
 
 
 
-        <section class="music" id="Pixies_-_Here_comes_you_man">
-          <h2><a href="#">#</a> Pixies - Here comes you man </h2>
+        <section class="music" id="TNT_-_Nao_sei">
+          <h2><a href="#">#</a> TNT - Não sei</h2>
           <code>
 <b>Tom:</b> D
+INTRO.: D  D4  A  G  A
 
-D  A  Em  G
+(D D4 A G A)
 
-Bm  G  A
+[Ponte]
+(A G)
 
-<b>Refrão:</b>
-G  A  D</code>
-          <code>
-G|------------------------------------------------|
-D|--<b>0--0</b>----4--4--5------------------------0-2--0-|
-A|--5--5-------------0-------2--0--0--4-----------|
-E|----------------------3-------------------------|
-B|------------------------------------------------|</code>
-        </section>
-
-
-
-        <section class="music" id="John_Mellencamp_-_Hurts_So_Good">
-          <h2><a href="#">#</a> John Mellencamp - Hurts So Good </h2>
-          <code>
-<b>Tom:</b> D
-A  F#m  E
-
-A  E  F#m  D
-
-<b>Campo harmônico:</b>
-G|--------------------------------------|
-D|--------------------------------------|
-A|--------------------------------------|
-E|--------------------------------------|
-B|--------------------------------------|</code>
+Não sei mais o que faço
+[Ponte]
+(A G)</code>
         </section>
 
 
@@ -342,8 +416,8 @@ G|-----|----------------------------|
 D|-----|----------------------------|
 A|-3/5-|-5-4-5-7--------------------|
 E|-----|---------3----10------------|
-
-POS-REFRÃO: SOLO DE BAIXO
+</code><code>
+<b>POS-REFRÃO: SOLO DE BAIXO</b>
 
 G|------|----------------------------|
 D|------|----------------------------|
@@ -358,27 +432,57 @@ E|------|---------3----10-9-10-12-10-|</code>
 
 
 
-        <section class="music" id="Barao_-_puro_extase">
-          <h2><a href="#">#</a> Barao - puro extase </h2>
+        <section class="music" id="Bandalheira_-_Me_leva_pra_casa">
+          <h2><a href="#">#</a> Bandalheira - Me leva pra casa </h2>
           <code>
-<b>Tom:</b> E
+<b>Tom:</b> G
 
-<b>Intro:</b>
-E2  D2  A  E2  D2  A  B7
+[Intro] G  C9 (4x)
 
-<b>Riff:</b> E7(9)
+G  Am  C9  D  Em
 
-A  C2  A B7  E2
+Refrão:
 
-<b>Refrão:</b>
-E  E/G#  A  A/B  E  E/G#  A  A/B</code>
+C9  Em  A7  D</code>
+        </section>
+
+
+        <section class="music" id="Papas_da_Lingua_-_Ela_vai_passar">
+          <h2><a href="#">#</a> Papas da Língua - Ela vai passar</h2>
           <code>
-<b>Riff E7(9):</b>
-G|-------------------------------------|-------------|---|
-D|-------------------------------------|-------------|---|
-A|-----------------------------------2-|-------------|---|
-E|-0-0-0/-3/-5--0--0--0-3/-5/--3--5----|-0--0--4/-5/-|-7-|
-B|-------------------------------------|-------------|---|</code>
+<b>Intro:</b>A  G  C
+
+ A  G  C
+            …
+
+ D  C  F
+Ela vai passar
+                    A  G  C
+Nâo vai nem olhar
+
+ Dm  Em
+Lá vem ela só na barriguinha
+</code>
+        </section>
+
+
+
+        <section class="music" id="Paralamas_-_Meu_Erro">
+          <h2><a href="#">#</a> Paralamas_-_Meu_Erro</h2>
+          <code>
+<b>Intro:</b>A  G  C
+
+ A  G  C
+            …
+
+ D  C  F
+Ela vai passar
+                    A  G  C
+Nâo vai nem olhar
+
+ Dm  Em
+Lá vem ela só na barriguinha
+</code>
         </section>
 
 
@@ -416,7 +520,6 @@ D--44-77-44------77-------66-99-66-------------------|
 A-----------55-88----88-77---------------------------|
 E----------------------------------------------------|</code>
         </section>
-
 
 
         <section class="music" id="Roupa_-_Whisky_a_go_go">
@@ -463,6 +566,33 @@ A|--------------------------------------|
 E|--------------------------------------|
 B|--------------------------------------|</code>
         </section>
+
+
+
+
+        <section class="music" id="Barao_-_puro_extase">
+          <h2><a href="#">#</a> Barao - puro extase </h2>
+          <code>
+<b>Tom:</b> E
+
+<b>Intro:</b>
+E2  D2  A  E2  D2  A  B7
+
+<b>Riff:</b> E7(9)
+
+A  C2  A B7  E2
+
+<b>Refrão:</b>
+E  E/G#  A  A/B  E  E/G#  A  A/B</code>
+          <code>
+<b>Riff E7(9):</b>
+G|-------------------------------------|-------------|---|
+D|-------------------------------------|-------------|---|
+A|-----------------------------------2-|-------------|---|
+E|-0-0-0/-3/-5--0--0--0-3/-5/--3--5----|-0--0--4/-5/-|-7-|
+B|-------------------------------------|-------------|---|</code>
+        </section>
+
 
 
 
@@ -576,6 +706,27 @@ B|--------------------------------------|</code>
 
 
 
+        <section class="music" id="Vera_-_Borracho_y_louco">
+          <h2><a href="#">#</a> Vera - Borracho y louco </h2>
+          <code>
+<b>Tom:</b>  Em
+
+Intro: Em  B
+
+       Em  Bm  Am  Em
+
+Em   Bm    Am    Em        B7</code>
+          <code>
+<b>Campo harmônico:</b>
+G|--------------------------------------|
+D|--------------------------------------|
+A|--------------------------------------|
+E|--------------------------------------|
+B|--------------------------------------|</code>
+        </section>
+
+
+
         <section class="music" id="Rock_de_Galpao_-_Amigo_punk">
           <h2><a href="#">#</a> Rock de Galpão - Amigo punk </h2>
           <code>
@@ -610,27 +761,6 @@ G|------------------------------------|
 D|----------------------------------7-|
 A|-----7-------------------7---5--8---|
 E|-5-8-----5-------8------------------|</code>
-        </section>
-
-
-
-        <section class="music" id="Vera_-_Borracho_y_louco">
-          <h2><a href="#">#</a> Vera - Borracho y louco </h2>
-          <code>
-<b>Tom:</b>  Em
-
-Intro: Em  B
-
-       Em  Bm  Am  Em
-
-Em   Bm    Am    Em        B7</code>
-          <code>
-<b>Campo harmônico:</b>
-G|--------------------------------------|
-D|--------------------------------------|
-A|--------------------------------------|
-E|--------------------------------------|
-B|--------------------------------------|</code>
         </section>
 
 
@@ -831,19 +961,6 @@ B|-----------------------------|</code>
         </section>
 
 
-        <section class="music" id="Bandalheira_-_Me_leva_pra_casa">
-          <h2><a href="#">#</a> Bandalheira - Me leva pra casa </h2>
-          <code>
-<b>Tom:</b> G
-
-[Intro] G  C9 (4x)
-
-G  Am  C9  D  Em
-
-Refrão:
-
-C9  Em  A7  D</code>
-        </section>
 
 
 
@@ -861,24 +978,6 @@ Refrão: C  G  Am    F
 Ponte:
 Dm7  C
 Dm7  F</code>
-        </section>
-
-
-
-        <section class="music" id="TNT_-_Nao_sei">
-          <h2><a href="#">#</a> TNT - Não sei</h2>
-          <code>
-<b>Tom:</b> D
-INTRO.: D  D4  A  G  A
-
-(D D4 A G A)
-
-[Ponte]
-(A G)
-
-Não sei mais o que faço
-[Ponte]
-(A G)</code>
         </section>
 
 
